# My-DNB

./: .gitignore  README.md  index.html  package-lock.json  package.json  启动.vbs  启动DNB.vbs
js/: logic.js  mkcharts.js  storage.js  timer.js
screens/: config.html  game.html  help.html  home.html  score.html  stats.html
scripts/: prepare-dist.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
styles/: default.css
