[package]
name = "dual-n-back"
version = "1.0.0"
description = "Dual-N-Back Brain Training Game"
authors = ["you"]
edition = "2021"

[lib]
name = "dual_n_back_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
